--- a/B/BSP/BSP/BSP.vcxproj.filters
+++ b/B/BSP/BSP/BSP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="d3dApp.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ShaderClass.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="d3dUtil.cpp">
@@ -38,7 +41,7 @@
     <ClCompile Include="d3dApp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="InitDirect3DApp.cpp">
+    <ClCompile Include="ShaderClass.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
