--- a/B/BSP/BSP/BSP.vcxproj.filters
+++ b/B/BSP/BSP/BSP.vcxproj.filters
@@ -51,4 +51,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shader\color.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
