--- a/B/BSP/BSP/BSP.vcxproj
+++ b/B/BSP/BSP/BSP.vcxproj
@@ -160,6 +160,9 @@
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="MathHelper.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shader\color.hlsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
