--- a/B/BSP/BSP/BSP.vcxproj
+++ b/B/BSP/BSP/BSP.vcxproj
@@ -161,7 +161,12 @@
     <ClCompile Include="MathHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shader\color.hlsl" />
+    <FxCompile Include="Shader\color.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
