--- a/K/testclient/gui_test/gui_test.vcxproj
+++ b/K/testclient/gui_test/gui_test.vcxproj
@@ -116,9 +116,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NetworkModule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Server2019G\header\protocol.h" />
+    <ClInclude Include="NetworkModule.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
