--- a/K/Server2019G/Server2019G.vcxproj
+++ b/K/Server2019G/Server2019G.vcxproj
@@ -84,7 +84,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\pxshared\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include\common;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\source\foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\kds25\Desktop\GP\SP\K\Server2019G\header;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\pxshared\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include\common;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\source\foundation\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>PX_PHYSX_CHARACTER_STATIC_LIB;_DEBUG;WIN32;WIN64;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_WINSOCK_DEPRECATED_NO_WARNINGS;PX_BUILD_NUMBER=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -115,7 +115,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include\common;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\source\foundation\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\pxshared\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\kds25\Desktop\GP\SP\K\Server2019G\header;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\include\common;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\source\foundation\include;C:\Users\kds25\Desktop\GP\SP\K\Server2019G\physx\pxshared\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_HAS_ITERATOR_DEBUGGING=0;_ITERATOR_DEBUG_LEVEL=0;NDEBUG;WIN32;WIN64;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_WINSOCK_DEPRECATED_NO_WARNINGS;PX_BUILD_NUMBER=0;PX_PHYSX_CHARACTER_STATIC_LIB;_HAS_EXCEPTIONS=0;PHYSX_PROFILE_SDK;PX_SUPPORT_PVD=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FloatingPointModel>Fast</FloatingPointModel>
@@ -128,10 +128,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="code\MapLoader.cpp" />
     <ClCompile Include="code\PhysXModule.cpp" />
     <ClCompile Include="code\server_main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="header\MapLoader.h" />
     <ClInclude Include="header\PhysXModule.h" />
     <ClInclude Include="header\protocol.h" />
   </ItemGroup>
