--- a/K/Server2019G/Server2019G.vcxproj.filters
+++ b/K/Server2019G/Server2019G.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="code\PhysXModule.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="code\MapLoader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\protocol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="header\PhysXModule.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="header\MapLoader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
