공격방식 및 공격 패킷 수정

--- a/B/BSP/BSP/BSP.vcxproj
+++ b/B/BSP/BSP/BSP.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\K\Server2019G\header\protocol.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="d3dApp.h" />
     <ClInclude Include="d3dUtil.h" />
