--- a/B/BSP/BSP/BSP.vcxproj.filters
+++ b/B/BSP/BSP/BSP.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="PhysXModule.h">
       <Filter>PhysX</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\K\Server2019G\header\protocol.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="d3dApp.cpp">
